tests/baselines/reference/numericIndexerConstrainsPropertyDeclarations.errors.txt
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2412: Property '3.0' of type 'MyNumber' is not assignable to numeric index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(23,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(26,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(36,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(79,5): error TS2322: Type '{ a: 文字; b: 数字; c: () => 无值; "d": 文字; "e": 数字; 1.0: 文字; 2.0: 数字; "3.0": 文字; "4.0": 数字; f: 任意; X: 文字; foo(): 文字; }' is not assignable to type '{ [x: 数字]: 文字; }'.
  Object literal may only specify known properties, and 'a' does not exist in type '{ [x: 数字]: 文字; }'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(88,9): error TS2304: Cannot find name 'Myn'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(90,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts(93,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/types/objectTypeLiteral/indexSignatures/numericIndexerConstrainsPropertyDeclarations.ts (11 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyNumber extends Number {
        foo: number;
    }
    
    class C {
        [x: number]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
        "3.0": string; // ok
        "4.0": number; // error
        3.0: MyNumber // error
        ~~~~~~~~~~~~~
!!! error TS2412: Property '3.0' of type 'MyNumber' is not assignable to numeric index type '文字'.
    
        get X() { // ok
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return '';
        }
        set X(v) { } // ok
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        foo() { 
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
    }
    
    interface I {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    var a: {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2412: Property '2.0' of type '数字' is not assignable to numeric index type '文字'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    // error
    var b: { [x: number]: string; } = {
        a: '',
        ~~~~~
!!! error TS2322: Type '{ a: 文字; b: 数字; c: () => 无值; "d": 文字; "e": 数字; 1.0: 文字; 2.0: 数字; "3.0": 文字; "4.0": 数字; f: 任意; X: 文字; foo(): 文字; }' is not assignable to type '{ [x: 数字]: 文字; }'.
!!! error TS2322:   Object literal may only specify known properties, and 'a' does not exist in type '{ [x: 数字]: 文字; }'.
        b: 1, 
        c: () => { }, 
        "d": '', 
        "e": 1, 
        1.0: '',
        2.0: 1, 
        "3.0": '', 
        "4.0": 1, 
        f: <Myn>null, 
            ~~~
!!! error TS2304: Cannot find name 'Myn'.
    
        get X() { 
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return '';
        },
        set X(v) { }, 
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        foo() { 
            return '';
        }
    }